//BAD!!! DON'T START NAMES WITH NEW OR COPY

import "Structure.proto";
import "User.proto";

package com.lvl6.proto;

option java_outer_classname = "CityProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO

message UserCityExpansionDataProto {
	optional int32 userId = 1;
	optional sint32 xPosition = 2;
	optional sint32 yPosition = 3;
	optional bool isExpanding = 4;
	optional int64 expandStartTime = 5;
}

//------------------------------------------------------------------------------------------

message CityExpansionCostProto {
	optional int32 expansionNum = 1; //first, second,...or nth expansion
	optional int32 expansionCostCash = 2;
	optional int32 numMinutesToExpand = 3;
}

//------------------------------------------------------------------------------------------

message CityElementProto {
	optional int32 cityId = 1;
	optional int32 assetId = 2;
	//optional string name = 3;
	optional CityElemType type = 4;
	optional CoordinateProto coords = 5;
	optional float xLength = 6;
	optional float yLength = 7;
	optional string imgId = 8;
	optional StructOrientation orientation = 9 [default = POSITION_1];
	optional CoordinateProto spriteCoords = 10;
	
	enum CityElemType {
		BUILDING = 1;
		DECORATION = 2;
		PERSON_NEUTRAL_ENEMY = 3;
		BOSS = 4;
	}
}

//------------------------------------------------------------------------------------------

message FullCityProto {
	optional int32 cityId = 1;
	optional string name = 2;
	optional string mapImgName = 3;
	optional CoordinateProto center = 4;
	optional string roadImgName = 5;
	optional string mapTmxName = 6;
	optional CoordinateProto roadImgCoords = 7;
	
	repeated int32 taskIds = 8;
	optional string attackMapLabelImgName = 9;
	
}
