
import "BoosterPackStuff.proto";
import "City.proto";
import "MonsterStuff.proto";
import "Quest.proto";
import "Structure.proto";
import "Task.proto";
import "User.proto";

package com.lvl6.proto;

option java_outer_classname = "StaticDataStuffProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO


message StaticDataProto {
    optional MinimumUserProto sender = 1;
	repeated CityExpansionCostProto expansionCosts = 2;
	repeated FullCityProto allCities = 3;
	repeated FullStructureProto allStructs = 4;
	repeated FullTaskProto allTasks = 5;
	repeated MonsterProto allMonsters = 6;
	repeated StaticUserLevelInfoProto slip = 7;
	
	repeated FullQuestProto inProgressQuests = 8; //has not been completed
    repeated FullQuestProto unredeemedQuests = 9; //is complete
	repeated FullQuestProto availableQuests = 10; 
	
	//optional RetrieveStaticDataStatus status = 11; //defined near the end
	repeated BoosterPackProto boosterPacks = 12;
	
	
	optional RetrieveStaticDataStatus status = 11;
	
	enum RetrieveStaticDataStatus {
		SUCCESS = 1;
		SOME_FAIL = 2;
	}
	
}
	